# ipcraft-spec

./: .gitignore  GEMINI.md  README.md  index.js  package.json  pyproject.toml
bus_definitions/: avalon_mm.yml  avalon_st.yml  axi4_full.yml  axi4_lite.yml  axi_stream.yml
common/: bus_definitions.yml
docs/: IP_YAML_SPEC.md  data_inspector_spec.md  ip_spec.md  memory_map_spec.md
examples/basic_peripheral/: basic_peripheral.ip.yml  basic_peripheral.mm.yml
examples/comprehensive_avalon/: README.md  comprehensive_avalon.ip.yml  comprehensive_avalon.mm.yml
examples/comprehensive_axi/: README.md  comprehensive_axi.ip.yml  comprehensive_axi.mm.yml
examples/daq_controller/: daq_controller.ip.yml  daq_controller.mm.yml
examples/data_inspector/: README.md  comprehensive_axi_status.ipci.yml  split_address.ipci.yml
examples/led/: led_controller.ip.yml  led_controller.mm.yml
examples/minimal/: minimal.ip.yml
examples/multi_interface_accelerator/: accelerator.ip.yml  accelerator.mm.yml
examples/system_controller/: system_controller.ip.yml
examples/system_controller/altera/: system_controller_hw.tcl
examples/test_cases/: basic.ip.yml  large_complex.ip.yml  minimal.ip.yml
examples/timers/: my_timer_core.ip.yml  my_timer_core.mm.yml
examples/xcvr_loopback/: xcvr_loopback.ip.yml
schemas/: board.schema.json  data_inspector.schema.json  ip_core.schema.json  memory_map.schema.json
templates/: array.mm.yml  avalon_peripheral.ip.yml  axi_slave.ip.yml  axi_slave.mm.yml  basic.ip.yml  basic.mm.yml  minimal.ip.yml  minimal.mm.yml  multi_block.mm.yml
(+27 files in other folders)
